Archive2/63/0e969edc491662/output
main.cpp:12:5: error: no matching function for call to 'foo'
    foo<S>();   
    ^~~~~~
main.cpp:9:6: note: candidate template ignored: substitution failure [with T = S]: 'member' is a private member of 'S'
auto foo() -> decltype(std::declval<T>().member(), void()) {}
     ^                                   ~~~~~~
1 error generated.
